--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
       crossorigin="anonymous"
     />
     <!-- JavaScript Bundle with Popper -->
-    <!-- <script
+    <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
       crossorigin="anonymous"
-    ></script> -->
+    ></script>
   </head>
   <body>
     <header>
@@ -111,46 +111,293 @@
     </div>
 
     <!-- SECCION SERVICIOS -->
-    <div class="" id="services">
-      <div class="container text-center">
-        <h2 class="title">Servicios</h2>
-        <div class="row d-flex justify-content-center">
-          <!-- Servicio #1 -->
-          <div class="service col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
-            <i class="fa-solid fa-scale-balanced"></i>
-            <h1>Fideicomisos</h1>
-          </div>
+    <div id="SkillsContainer">
+      <div class="container">
+        <h2 id="habilidadesTitle" class="title text-center">Servicios</h2>
 
-          <!-- Servicio #2 -->
-          <div class="service col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
-            <i class="fa-solid fa-scale-balanced"></i>
-            <h1>Bienes raíces</h1>
-          </div>
+        <div id="cardSkillsContainer">
+          <div class="text-center">
+            <!-- Col 1-3 -->
+            <div class="row d-flex justify-content-center">
+              <!-- Servicio #1 -->
+              <div
+                class="cardContainer col-10 col-sm-8 col-md-2 col-lg-2 col-xl-4 pb-4"
+              >
+                <div>
+                  <div class="cardSkills">
+                    <i class="fa-solid fa-scale-balanced"></i>
+                    <h5 class="titleSkill pt-3 text-white">Fideicomisos</h5>
+                  </div>
+                </div>
+              </div>
 
-          <!-- Servicio #3 -->
-          <div class="service col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
-            <i class="fa-solid fa-scale-balanced"></i>
-            <h1>Conformación de sociedades</h1>
+              <!-- Servicio #2 -->
+              <div
+                class="cardContainer col-10 col-sm-8 col-md-2 col-lg-2 col-xl-4 pb-4"
+              >
+                <div>
+                  <div class="cardSkills">
+                    <i class="fa-solid fa-building"></i>
+                    <h5 class="titleSkill pt-3 text-white">Bienes raíces</h5>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Servicio #3 -->
+              <div
+                class="cardContainer col-10 col-sm-8 col-md-2 col-lg-2 col-xl-4 pb-4"
+              >
+                <div>
+                  <div class="cardSkills">
+                    <i class="fa-solid fa-handshake"></i>
+                    <h5 class="titleSkill pt-3 text-white">
+                      Conformación de sociedades
+                    </h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Col 4-6 -->
+            <div
+              id="skillSecondContainer"
+              class="row d-flex justify-content-center"
+            >
+              <!-- Habilidad #4 -->
+              <div
+                class="cardContainer col-10 col-sm-8 col-md-2 col-lg-4 col-xl-4 pb-4"
+              >
+                <div>
+                  <div class="cardSkills">
+                    <i class="fa-solid fa-share-nodes"></i>
+                    <h5 class="titleSkill pt-3 text-white">
+                      Reestructuración societaria
+                    </h5>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Habilidad #5 -->
+              <div
+                class="cardContainer col-10 col-sm-8 col-md-2 col-lg-4 col-xl-4 pb-4"
+              >
+                <div>
+                  <div class="cardSkills">
+                    <i class="fa-solid fa-aperture"></i>
+                    <i class="fa-solid fa-share-nodes"></i>
+
+                    <h5 class="titleSkill pt-3 text-white">
+                      Gestión de crisis
+                    </h5>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Habilidad #6 -->
+              <div
+                class="cardContainer col-10 col-sm-8 col-md-2 col-lg-4 col-xl-4 pb-4"
+              >
+                <div>
+                  <div class="cardSkills">
+                    <i class="fa-solid fa-messages"></i>
+                    <i class="fa-solid fa-share-nodes"></i>
+
+                    <h5 class="titleSkill pt-3 text-white">
+                      Negociación de deudas
+                    </h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- SECCION BLOG -->
+    <div id="blogContrainer">
+      <div class="container">
+        <h2 class="text-white text-center title">Blog</h2>
+
+        <!-- Card Section -->
+        <div class="text-center">
+          <div class="row">
+            <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+              <div class="card">
+                <img
+                  src="./src/images/bienes_raices.jpg"
+                  class="card-img-top"
+                  alt="..."
+                  width="100%"
+                  height="250px"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">
+                    How to Create a Slide Transition Between “Pages” in JS...
+                  </h5>
+                  <div class="d-flex justify-content-center pt-3 pb-2">
+                    <i class="fa-solid fa-clock"></i>
+                    <p class="minutesTitle">5 min lectura</p>
+                  </div>
+                  <p class="card-text pb-3 pharrCard">
+                    In this tutorial, you’re going to learn how to slide between
+                    pages. By the word “pages”, I don’t mean we’re going to
+                    slide from say index.html over
+                  </p>
+                  <a href="#" class="btn btn-primary">LEER MÁS</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+              <div class="card">
+                <img
+                  src="./src/images/fideicomiso.png"
+                  class="card-img-top"
+                  alt="..."
+                  width="100%"
+                  height="250px"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">
+                    How to Extract Metadata from Music Files with JavaScript...
+                  </h5>
+                  <div class="d-flex justify-content-center pt-3 pb-2">
+                    <i class="fa-solid fa-clock"></i>
+                    <p class="minutesTitle">3 min lectura</p>
+                  </div>
+                  <p class="card-text pb-3 pharrCard">
+                    Learning how to drag & drop an image into your project can
+                    seem like a complicated task. In fact, it can be if you’ve
+                    never done it before
+                  </p>
+                  <a href="#" class="btn btn-primary">LEER MÁS</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+              <div class="card">
+                <img
+                  src="./src/images/sociedad-comercial.jpg"
+                  class="card-img-top"
+                  alt="..."
+                  width="100%"
+                  height="250px"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">
+                    How to Create a Slide Transition Between “Pages” in Js...
+                  </h5>
+                  <div class="d-flex justify-content-center pt-3 pb-2">
+                    <i class="fa-solid fa-clock"></i>
+                    <p class="minutesTitle">6 min lectura</p>
+                  </div>
+                  <p class="card-text pb-3 pharrCard">
+                    There comes a time in a developer’s journey when they want
+                    to build something more complex than the typical to-do list
+                    or Calculator
+                  </p>
+                  <a href="#" class="btn btn-primary">LEER MÁS</a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
 
-        <div class="row d-flex justify-content-center">
-          <!-- Servicio #4 -->
-          <div class="service col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
-            <i class="fa-solid fa-scale-balanced"></i>
-            <h1>Fideicomisos</h1>
-          </div>
+        <!-- Btn Ver más -->
+        <div id="btnViewMore">
+          <a href="#" class="btn btn-primary">VER MÁS</a>
+        </div>
+      </div>
+    </div>
 
-          <!-- Servicio #5 -->
-          <div class="service col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
-            <i class="fa-solid fa-scale-balanced"></i>
-            <h1>Bienes raíces</h1>
-          </div>
+    <!-- SECCION CONTACTO -->
+    <div id="contactSection">
+      <div class="container">
+        <div class="container">
+          <div class="row">
+            <div
+              id="contactMap"
+              class="col-xs-12 col-sm-12 col-md-12 col-lg-5 text-white"
+            >
+              <h4>Rompero Porrés - Estudio jurídico</h4>
+              <p>Anchorena 1626</p>
+              <p>CABA. CP 1425</p>
+              <!-- Phone -->
+              <div class="d-flex">
+                <i class="fa-solid fa-phone"></i>
+                <p>+54 9 11 62344913</p>
+              </div>
+              <!-- e-mail -->
+              <div class="d-flex">
+                <i class="fa-solid fa-envelope"></i>
+                <p>franciso@romeroporres.com.ar</p>
+              </div>
+              <!-- linkedin -->
+              <div class="d-flex">
+                <i class="fa-brands fa-linkedin"></i>
+                <p>@romeroporres.com.ar</p>
+              </div>
+              <!-- Instagram -->
+              <div class="d-flex">
+                <i class="fa-brands fa-instagram-square"></i>
+                <p>@romeroporres.com.ar</p>
+              </div>
 
-          <!-- Servicio #6 -->
-          <div class="service col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
-            <i class="fa-solid fa-scale-balanced"></i>
-            <h1>Conformación de sociedades</h1>
+              <!-- Google Map  -->
+              <div id="googleMap">
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.5015795735712!2d-58.4031485!3d-34.5914761!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca9aff4e7fd7%3A0x37fb0224e9e2d3b7!2sDr.%20Tom%C3%A1s%20Manuel%20de%20Anchorena%201626%2C%20C1425ELL%20CABA!5e0!3m2!1ses!2sar!4v1656288376158!5m2!1ses!2sar"
+                  width="450"
+                  height="450"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
+              </div>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7">
+              <h2 class="text-center">Contáctanos</h2>
+
+              <!-- Formulario de contacto -->
+              <form>
+                <div class="mb-3">
+                  <label for="exampleInputEmail1" class="form-label"></label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="exampleInputEmail1"
+                    aria-describedby="emailHelp"
+                    placeholder="Nombre"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="exampleInputEmail1" class="form-label"></label>
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="exampleInputEmail1"
+                    aria-describedby="emailHelp"
+                    placeholder="Apellido"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="exampleInputPassword1" class="form-label"></label>
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="exampleInputPassword1"
+                    placeholder="E-mail"
+                  />
+                </div>
+                <div class="mb-3 form-check">
+                  <textarea name="" id="formTextArea" cols="30" rows="10">
+Mensaje</textarea
+                  >
+                </div>
+                <button type="submit" class="btn btn-primary">Enviar</button>
+              </form>
+            </div>
           </div>
         </div>
       </div>
@@ -159,6 +406,6 @@
     <!-- Js de menu -->
     <script src="./menu.js"></script>
     <!-- JS de slider -->
-    <script src="./slider.js"></script>
+    <!-- <script src="./slider.js"></script> -->
   </body>
 </html>
