--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Romero Porrés - Estudio Jurídico</title>
     <link rel="stylesheet" href="./styles.css" />
 
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="./src/images/favicon.svg" />
+
     <!-- Font Awsome -->
     <link
       rel="stylesheet"
@@ -57,15 +60,15 @@
           </li>
           <div class="hr"></div>
           <li class="navItem">
-            <a href="#SkillsContainer" class="nav-link">Servicios</a>
+            <a href="#services" class="nav-link">Servicios</a>
           </li>
           <div class="hr"></div>
           <li class="navItem">
-            <a href="#blogContrainer" class="nav-link">Blog</a>
+            <a href="#newsSection" class="nav-link">News</a>
           </li>
           <div class="hr"></div>
           <li class="navItem">
-            <a href="#contactSection" class="nav-link">Contacto</a>
+            <a href="#contactContainer" class="nav-link">Contacto</a>
           </li>
         </ul>
 
@@ -129,18 +132,21 @@
       </div>
     </div>
 
-    <!-- Img -->
+    <!-- Img & text-->
     <div id="imageContainer">
       <div class="container">
         <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+          <div
+            id="aboutTextphar"
+            class="col-xs-12 col-sm-12 col-md-12 col-lg-6"
+          >
             <p>
-              En <span class="">RomeroPorres</span>, nos sustenta la misión de
-              ser referentes jurídicos para la creación de nuevos negocios en
-              todo el territorio de nuestra Argentina Somos una consultora
-              jurídica conformada por un equipo de letrados asociados con
-              presencia en todo nuestro país con un soporte de profesionales de
-              diversas especialidades orientados en nuestra esencia, que es
+              En <span class="rptext">RomeroPorres</span>, nos sustenta la
+              misión de ser referentes jurídicos para la creación de nuevos
+              negocios en todo el territorio de nuestra Argentina Somos una
+              consultora jurídica conformada por un equipo de letrados asociados
+              con presencia en todo nuestro país con un soporte de profesionales
+              de diversas especialidades orientados en nuestra esencia, que es
               colaborar en construir negocios confiables en Argentina.<!-- Con base
               en la Ciudad Autónoma de Buenos Aires, México, trabajamos de
               manera colaborativa junto a grupo de inversores, empresas,
@@ -244,23 +250,26 @@
       <div class="">
         <div class="row d-flex">
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 g-0">
-            <div id="image1">
+            <div class="" id="image1">
               <h2>BIENES RAICES</h2>
               <p>Level up your legacy</p>
+              <div class="underlineNews"></div>
             </div>
           </div>
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 g-0">
             <div id="image2">
               <h2>CONFORMACIÓN DE SOCIEDADES</h2>
               <p>Realize your product vision</p>
+              <div class="underlineNews"></div>
             </div>
           </div>
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 g-0">
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4">
             <div id="image3">
               <h2>FIDEICOMISOS</h2>
               <p>
                 Accelerate your path to creating breakthrough digital products
               </p>
+              <div class="underlineNews"></div>
             </div>
           </div>
         </div>
@@ -274,20 +283,23 @@
             <div id="image4">
               <h2>Reestructuración societaria</h2>
               <p>Level up your legacy</p>
+              <div class="underlineNews"></div>
             </div>
           </div>
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 g-0">
             <div id="image5">
               <h2>Gestión de crisis</h2>
               <p>Realize your product vision</p>
+              <div class="underlineNews"></div>
             </div>
           </div>
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 g-0">
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4">
             <div id="image6">
               <h2>Negociación de deudas</h2>
               <p>
                 Accelerate your path to creating breakthrough digital products
               </p>
+              <div class="underlineNews"></div>
             </div>
           </div>
         </div>
@@ -306,8 +318,8 @@
                 How IT modernization positioned CaringBridge to respond in times
                 of crisis
               </h3>
-              <div class="btnNews">
-                <a href="#">Leer más</a>
+              <div id="btnHeader">
+                <a class="news-link" href="">LEER MÁS</a>
               </div>
             </div>
           </div>
@@ -320,21 +332,21 @@
                   Nerdery Recognized as One of Built In Chicago’s Best Midsize
                   Companies to Work For
                 </h3>
-                <div class="btnNews">
-                  <a href="#">Leer más</a>
+                <div id="btnHeader">
+                  <a class="news-link" href="">LEER MÁS</a>
                 </div>
               </div>
             </div>
 
-            <!--  -->
+            <!-- News 2  -->
             <div class="">
               <div class="newsContainer">
                 <h3>
                   Nerdery Named a Stevie® Award Winner for Cloud Migration as a
                   Service
                 </h3>
-                <div class="btnNews">
-                  <a href="#">Leer más</a>
+                <div id="btnHeader">
+                  <a class="news-link" href="">LEER MÁS</a>
                 </div>
               </div>
             </div>
