--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                 of crisis
               </h3>
               <div id="btnHeader">
-                <a class="news-link" href="">LEER MÁS</a>
+                <a class="news-link" href="./news-name-of-new.html">LEER MÁS</a>
               </div>
             </div>
           </div>
@@ -333,7 +333,9 @@
                   Companies to Work For
                 </h3>
                 <div id="btnHeader">
-                  <a class="news-link" href="">LEER MÁS</a>
+                  <a class="news-link" href="./news-name-of-new.html"
+                    >LEER MÁS</a
+                  >
                 </div>
               </div>
             </div>
@@ -346,7 +348,9 @@
                   Service
                 </h3>
                 <div id="btnHeader">
-                  <a class="news-link" href="">LEER MÁS</a>
+                  <a class="news-link" href="./news-name-of-new.html"
+                    >LEER MÁS</a
+                  >
                 </div>
               </div>
             </div>
