--- a/news-name-of-new.html
+++ b/news-name-of-new.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Name of news</title>
-    <link rel="stylesheet" href="./styleTEST.css" />
+    <link rel="stylesheet" href="./styles.css" />
 
     <!-- Font Awsome -->
     <link
@@ -54,7 +54,7 @@
           <!-- <h2 class="text-white" id="">RomeroPorres</h2> -->
           <!-- <a href="#" class="nav-branding">RomeroPorres</a> -->
           <!-- <h2 class="navItem" id="logo">RomeroPorres</h2> -->
-          <a class="navItem" href="./index.html">RomeroPorres</a>
+          <a id="logoRP" class="navItem" href="./index.html">RomeroPorres</a>
         </div>
 
         <div class="container d-flex justify-content-end pt-2 pb-2">
@@ -103,6 +103,7 @@
           Built In Chicago’s Best Midsize <br />
           Companies to Work For
         </h2>
+        <div class="underlineForNewsTitle"></div>
         <p class="subtitleOfNew">
           Nerdery’s Chicago office recognized by awards program for work culture
         </p>
